--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Sample Site</title>
-
+    <script src="https://js.stripe.com/v3/"></script>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <style>
         body { padding-top:50px; }
     </style>
 </head>
 <body>
-
     <div class="container">
         <div class="jumbotron">
             <h1>res.sendFile() Works!</h1>
+            <script>
+              const stripe = Stripe('pk_test_V4IMbysDTdphjZ7GV2f2iNSp');
+              stripe.redirectToCheckout({sessionId: '{{CHECKOUT_SESSION_ID}}'})
+              .then((result) => {});
+            </script>
         </div>
     </div>
 
