--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             <h1>res.sendFile() Works!</h1>
             <script>
               const stripe = Stripe('pk_test_V4IMbysDTdphjZ7GV2f2iNSp');
-              stripe.redirectToCheckout({sessionId: '{{CHECKOUT_SESSION_ID}}'})
+              stripe.redirectToCheckout({sessionId: 'cs_test_H0QawhLbuAYCWNRAJkAPkN7eyFT1UgkCFKTd4oNZEIOJu6t3CiIBM2fx'})
               .then((result) => {});
             </script>
         </div>
